# MLOps-Course-Labs

./: .dockerignore  Dockerfile  README.md  locustfile.py  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
app/: logger_setup.py  model_utils.py
tests/: test_main.py
